--- a/PSet4_V1.Rmd
+++ b/PSet4_V1.Rmd
@@ -88,7 +88,7 @@ Comparison of graphs in part(a) and part(b):\
   On the other hand, there are also many difficulties of comparing trends between the metals using graph on part(a). When two variables fluctuatae at a distance far apart, it is hard to compare trends between the metals (for example trends of Silver(XAU) v.s. Platinum (XPT) or Platinum vs Gold (XAU)/Palladium(XPD)). Even if two metals' prices fluctuate in relatively close to each other, for example, Gold (XAU) vs Palladium(XPD), there are difficulties in comparing trends of the two metals. In this case, while we can identify approixmated trends such as increasement/decreasement of the two metals' price when prices of the two metals both increase and decrease in a given,same period, exact trends between the two metals cannot be measured since the fluctations are still based on two different "scales".\
 \
   Now looking at the graph on part(b), where rescaling is applied so that all the metals' price begin at a value of 100, totally different trends appear, both for individual metals, and when comparing among/between the metals. First looking at individual trend of metals, distinction appears most apparent in silver's trend. While it was shown on part(a) that it had neary no fluctuation on the same period of time, it now shows to fluctuate equivalently or even more than other metals. Also, It's relative price, which started from 100, reaches around 115 at the end of the given period, about 15% increasement which was not visible from graph on part(a). This phenomenon similarly applies to other metals in that it all show to fluctuate more "widely", when compared to graph shown in part(a). Also, each of the metal prices increases at the end period compared to the starting period, which again was hard to visualize in graph in part(a).\
-  A more clear benefit of appllying the unified starting value is when we try to compare trends between different metals. Comparing between trends of Platinum and Silver, which was not easy to compare in part 1 except that platinum's price is higher than that of silver, it now shows that Silver is fluctuating at a higher level than that of Platinum. Also, as shown on the graph on part(a), when two variables fluctuates in a realtively close to each other, without scaling the two variables to the same starting value, it was hard to compare trends since each flunctuation is relative to each variable's previous values, which are different from that of another variable. This phenonmeon appears most clearly, for example, when we are compare Palladium(XPD) and Gold(XAU) around September. In graph (a), Gold's price per ounce (XAU), which was higher than that of Palladium(XPD) right before September, decreases and interescts, then the trend changes around when September begins. However, as can seen on the graph above on part(b), this trend does not appear.\
+  A clearer benefit of appllying the unified starting value is when we try to compare trends between different metals. Comparing between trends of Platinum and Silver, which was not easy to compare in part 1 except that platinum's price is higher than that of silver, it now shows that Silver is fluctuating at a higher level than that of Platinum. Also, as shown on the graph on part(a), when two variables fluctuates in a realtively close to each other, without scaling the two variables to the same starting value, it was hard to compare trends since each flunctuation is relative to each variable's previous values, which are different from that of another variable. This phenonmeon appears most clearly, for example, when we are compare Palladium(XPD) and Gold(XAU) around September. In graph (a), Gold's price per ounce (XAU), which was higher than that of Palladium(XPD) right before September, decreases and interescts, then the trend changes around when September begins. However, as can seen on the graph above on part(b), this trend does not appear.\
   Thus, it is crucial to replot to compare trends of different variables. As described briefly above, transforming/scaling the data such that each variable's value start from common value, i.e. 100, reveals trends that could not be seen otherwise. For another example, until early June to Auguts, graph oh part(a) does not reveal any intersection of the lines. However, as shown on graph on part (b), the metal_prices between Gold and Palladium interesects around early june in that a trend of Gold's price per ounce, which was higher than that of Palladium, changes upside down.\
 
 
@@ -103,6 +103,9 @@ For inspiration, see these examples:
 https://www.nytimes.com/interactive/2017/06/30/upshot/the-best-and-worst-new-york-neighborhoods.html
 
 https://www.nytimes.com/interactive/2017/10/05/upshot/gun-ownership-partisan-divide.html
+
+A crude rate is the number of new cases (or deaths) occurring in a specified population per year. We use the crude rate data as the variable of interest.
+
 ```{r, fig.width=15, fig.height=20}
 library(readr)
 library(maps)
@@ -128,8 +131,8 @@ states_map <-map_data("state")
 ggplot(df, aes(map_id = state)) + geom_map(aes(fill = `Crude Rate`), map = states_map, col = "white") +
   expand_limits(x = states_map$long, y = states_map$lat) + scale_fill_viridis_c(option = "viridis") +
   facet_wrap(~Year, ncol = 2 ) +
-  labs(fill = "Death rate per \n 10,000 population ",
-       title = "U.S. Death Rate per 10,000 population from 2008-2017", x = "longitude", y = "latitude",
+  labs(fill = "Death Number per \n 10,000 population ",
+       title = "U.S. Death Number per 10,000 population from 2008-2017", x = "longitude", y = "latitude",
        caption = "source: https://wonder.cdc.gov/ucd-icd10.html") +
   coord_fixed(1.3) +
   theme_minimal()
@@ -149,11 +152,11 @@ result
 
 (b) Interpret the graphs you drew in (a).\
 \
-  First, the oiginal dataset acquired from the source(https://wonder.cdc.gov/ucd-icd10.html) has yearly data early from 1999. We took most recent 10 years of data, which is from year 2008 to 2017, to better see trends of death rate per 10,000 over the period (i.e. plotting all 19 years of data seem to take too much space). \
-  Throughout the graph Viridis color distribution is used with brighter/darker color represents higher/lower death rate per 10,000 people. In general, it is interesting to note that over the given period, states' color does not change abruptly (except for few states). Overall distribution of color of states in 2008 tend to be similar compared to other years, and distribuution of colors of states in that most of states's color do not tend to change abruptly over the years such that it stands out from other years. Then, what is more interesting is that since each state's color is different (meaning death rate per 10,000 people  is different per each state), it represents that some states tend to have higher/lower death rate than other states, and this trend does not abruptly change over each year. Now let's look at patterns from some particular states.\
-  From the 10 years of data, it is first apparent by looking at the graphs that there is one state, West Virginia, which sticks out from rest of the states by its lightest color. The state's color becomes lighter over the period from light green to yellow. Since we are using Viridis color palette, with its lighter count represents higher death rate per 10,000 people, it not only shows that in each year, West Virginia has highest death rate out of all the States, and its death rate tends to keep increasing over the 10 year period. In fact, this was again verified by the table after the graph where it shows states with 3 highest and lowest death rate for each year.\
-  Similarly, by looking at the graphs, states in southeastern region seem to have brigter colors compared to other regions besides West Virginia. And over the 10 years, it becomes clearer that Alabama, and Arkansas seem to become distinct by its lighter colors compared to other staes in the southeasern region and generally compared to other states. This represents that these two states would likely to have higher death rate per 10,000 peoople compared to other states, and this again can be verified by the above table where it shows Alabama and Arkansas being most often reported to be states with 2nd and 3rd states with highest death rate.\
-  On the other hand, similar to West Virginia, there is one state, Utah, which stands out from rest of the states by its darkest color of dark purple in each year over the period. The darkest color represents that the state, Utah, would have lowest death rate per 10,000 people. As verified by the table above, it is correct that Utah stays at state with lowest death rate per 10,000 people, besides Alaska (Note. Althogh Alaska's data is given in the dataset, it is not shown on the map(similarly to Hawaii) since map_data() function, which is used to denote each state's location, do not include the states). Similar to Arkansas and Alabama, the next two darkest colored states and thus next lowest death rate appear to be from Colorado and California (and it is verified by the table above in that both states often appear in the bottom 3 list)\
+  First, the oiginal dataset acquired from the source(https://wonder.cdc.gov/ucd-icd10.html) has yearly data early from 1999. We took most recent 10 years of data, which is from year 2008 to 2017, to better see trends of death number per 10,000 over the period (i.e. plotting all 19 years of data seem to take too much space). \
+  Throughout the graph Viridis color distribution is used with brighter/darker color represents higher/lower death number per 10,000 people. In general, it is interesting to note that over the given period, states' color does not change abruptly (except for few states). Overall distribution of color of states in 2008 tend to be similar compared to other years, and distribuution of colors of states in that most of states's color do not tend to change abruptly over the years such that it stands out from other years. Then, what is more interesting is that since each state's color is different (meaning death number per 10,000 people is different per each state), it represents that some states tend to have higher/lower death rate than other states, and this trend does not abruptly change over each year. The west part of the country seems to have a overall lower death rate compared to the east side, and this gap is getting larger as time moves on. Now let's look at patterns from some particular states.\
+  From the 10 years of data, it is first apparent by looking at the graphs that there is one state, West Virginia, which sticks out from rest of the states by its lightest color. The state's color becomes lighter over the period from light green to yellow. Since we are using Viridis color palette, with its lighter count represents higher death number per 10,000 people, it not only shows that in each year, West Virginia has highest death rate out of all the States, and its death rate tends to keep increasing over the 10 year period. In fact, this was again verified by the table after the graph where it shows states with 3 highest and lowest death rate for each year.\
+  Similarly, by looking at the graphs, states in southeastern region seem to have brigter colors compared to other regions besides West Virginia. And over the 10 years, it becomes clearer that Alabama, and Arkansas seem to become distinct by its lighter colors compared to other staes in the southeasern region and generally compared to other states. This represents that these two states would likely to have higher death number per 10,000 peoople compared to other states, and this again can be verified by the above table where it shows Alabama and Arkansas being most often reported to be states with 2nd and 3rd states with highest death rate.\
+  On the other hand, similar to West Virginia, there is one state, Utah, which stands out from rest of the states by its darkest color of dark purple in each year over the period. The darkest color represents that the state, Utah, would have lowest death number per 10,000 people. As verified by the table above, it is correct that Utah stays at state with lowest death number per 10,000 people, besides Alaska (Note. Althogh Alaska's data is given in the dataset, it is not shown on the map(similarly to Hawaii) since map_data() function, which is used to denote each state's location, do not include the states). Similar to Arkansas and Alabama, the next two darkest colored states and thus next lowest death rate appear to be from Colorado and California (and it is verified by the table above in that both states often appear in the bottom 3 list)\
 
 
 ### 4. Mosaic plot (SVG / D3)
